@@ -113,7 +113,6 @@ ConnectionGroup.1=Host is not configured: {0}
 ConnectionProperties.unableToInitDriverProperties=Unable to initialize driver properties due to 
 ConnectionProperties.errorNotExpected=Huh?
 ConnectionProperties.dynamicChangeIsNotAllowed=Dynamic change of ''{0}'' is not allowed.
-ConnectionProperties.notFound=Connection property ''{0}'' is not found.
 
 ConnectionString.0=The database URL cannot be null.
 ConnectionString.1=Malformed database URL, failed to parse the main URL sections.
